<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FiTrackActivity!</string>
    <string name="app_name">FiTrack</string>
    <string name="password">Password:</string>
    <string name="login">Log In</string>
    <string name="larrow">←←</string>
    <string name="rarrow">→→</string>
    <!-- <string name="wod">Workout of the Day</string>  -->
    
    <string name="start_wod">Start Wod</string>
    <string name="wod">WOD</string>
    <string name="goals">Goals</string>
    <string name="logs">Logs</string>
    <string name="timer">Timer</string>
    
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="about">About</string>
    
    <string name="signin">Sign in</string>
    <string name="account">Account</string>
    <string name="box">Box</string>
    <string name="reset_local_data">Reset Local Data</string>
    <string name="select_box_to_stop_following">Select box to stop following</string>
    <string name="username">Username</string>
    <string name="username_filler">myusername</string>
    <string name="email">Email</string>
    <string name="email_field_filler">yourname@example.com</string>
    <string name="description">Description</string>
    <string name="description_filler">Your profile description</string>
    
    <string name="box_id">Box ID</string>
    <string name="box_name">Box Name</string>
    <string name="schedule_wod">Schedule WOD</string>
    <string name="view_edit_details">View/Edit Details</string>
    <string name="delete">Delete</string>
    <string name="id_label">ID:</string>
    <string name="id_filler">Your box ID</string>
    
    <string name="create">Create</string>
    
    <string name="save">Save</string>
    
    <string name="create_box_title">Create a box</string>
    <string name="select_box_to_manage">Select a box to manage</string>
   
    <string name="fitrack_logo_contentDescription">FiTrack logo</string>
   
    <string name="edit_profile">Edit Account Details</string>
    
    <string name="create_box_button">Create Box</string>
    <string name="follow_box_button">Follow Box</string>
    <string name="unfollow_box_button">Stop Following Box</string>
    <string name="manage_box_button">Manage Box</string>
    <string name="box_settings_title">Box Settings</string>
    
    <string name="schedule_wod_title">Schedule WOD</string>
    <string name="schedule_button">Schedule</string>
    <string name="follow_box_title">Follow a box</string>
    <string name="follow">Follow</string>
    
    <string name="account_settings_title">Account Settings</string>
    <string name="change_password">Change Password</string>
    <string name="edit_account_information">Edit Account Information</string>
    <string name="forgot_username_or_password">Forgot Username or Password</string>
    
    <!-- create_custom_wod.xml -->
    <string name="create_custom_wod_title">Create a cutom WOD</string>
    <string name="add_exercise">Add</string>
    <string name="custom_wod_name_label">Custom WOD Name:</string>
    <string name="add_wod_descriptionon_label">Add Description (optional):</string>
    <string name="add_exercises_label">Add Exercises:</string>
    
    <!-- crossfit_rss_layout.xml -->
    <string name="rss_default_title">Crossfit</string>
    <string name="do_it">Do it!</string>
    
    <!-- wod_view_layout2.xml -->
    <string name="start">Start</string>
    <string name="default_time">00:00.000</string>
    <string name="wod_name">Wod Name</string>
    <string name="progress_label">Progress:</string>
    
    <!-- wod_list_item.xml -->
    <string name="exercise_name_filler">Exercise Name</string>
    <string name="exercise_description_filler">Exercise description will go here</string>
    <string name="side_info_filler">sets: 0/5\nreps: 8\ntimer: 60</string>
    
    <!-- strength_popup.xml -->
    <string name="exercise_name">Exercise Name</string>
    <string name="cancel">Cancel</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    
    <!-- register_layout.xml -->
    <string name="confirm_password">Confirm</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    
    <!-- login.xml -->
    <string name="forgot_short">Forgot?</string>
    <string name="login_title">Sign in to your account</string>
    
    <!-- forgot_password_layout.xml -->
    <string name="send_username">Send Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_account_info">Forgot account info</string>
    
    <!-- change_password.xml -->
    <string name="change_your_password">Change your password</string>
    <string name="new_text">New</string>
    <string name="current_text">Current</string>
    <string name="distance">Distance (Meters)</string>
    
    <!-- This array of strings is used to put list items
    under the "Other WODs Tab -->
    <string-array name="countries_array">
  		<item>Find a WOD</item>
        <item>Scheduled Workout</item>
		<item>CrossFit Official RSS</item>
        <item>Custom WOD Options</item>
    </string-array>
</resources>