<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/transparent_blue" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/signin" android:layout_marginTop="50dip"/>

    <Button
        android:id="@+id/account_settings_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signin_button"
        android:layout_below="@+id/signin_button"
        android:layout_marginTop="25dip"
        android:text="@string/account" />
    
    <Button
        android:id="@+id/box_settings_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_settings_button"
        android:layout_below="@+id/account_settings_button"
        android:layout_marginTop="25dip"
        android:text="@string/box" />

    <Button
        android:id="@+id/reset_local_data_button"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/box_settings_button"
        android:layout_below="@+id/box_settings_button"
        android:layout_marginTop="100dip"
        android:text="@string/reset_local_data" android:background="@drawable/red_button" android:textStyle="bold" android:typeface="monospace" android:textColor="#ffffff"/>

</RelativeLayout>